--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.11"
+    "@sanity/astro": "^3.2.6",
+    "@sanity/client": "^6.29.1",
+    "astro": "^5.7.11",
+    "astro-portabletext": "^0.11.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-is": "^19.1.0",
+    "sanity": "^3.88.1",
+    "styled-components": "^6.1.18"
   }
 }
